#bug fixed - text overlaping bug fixed with auto height

--- a/src/App.css
+++ b/src/App.css
@@ -44,9 +44,7 @@
   background-color: rgb(136, 240, 136);
 }
 .question-text {
-  display: flex;
-  flex-wrap: wrap;
-  height: 4rem;
+  height: auto;
   margin-bottom: 3rem;
 }
 .option-box {
@@ -54,7 +52,7 @@
   display: flex;
   flex-direction: row;
   align-items: start;
-  height: 3rem;
+  height: auto;
 }
 button {
   margin-top: 0.5rem;
@@ -97,9 +95,7 @@ button:hover {
   .option-box {
     font-size: 1.2rem;
   }
-  .question-text {
-    height: 9rem;
-  }
+
   .root-container {
     width: 38rem;
   }
@@ -128,9 +124,7 @@ button:hover {
   .option-box {
     font-size: 1.6rem;
   }
-  .question-text {
-    height: 13rem;
-  }
+
   .root-container {
     width: 46rem;
   }
